--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,6 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'fonts.scss';
+
+html,
+body {
+	font-family:
+		'KrungthaiFast-Regular',
+		-apple-system,
+		BlinkMacSystemFont,
+		Segoe UI,
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		Fira Sans,
+		Droid Sans,
+		Helvetica Neue,
+		sans-serif !important;
+}
+
+.font-bold{
+	font-family: "KrungthaiFast-Bold" !important;
+}
+
 .bg{
     /* background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url('/images/bg.png'); */
 	background-size: cover;
@@ -16,6 +39,12 @@
     font-size: 1.15rem !important;
 }
 
+.size{
+	input{
+		font-size: 1.4rem !important;
+		
+	}
+}
 .colorful {
 	width: 56px;
 	height: 56px;
